--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -47,6 +47,14 @@
   note = {Accessed: 2016-11-22}
 }
 
+@misc{theanoRBM,
+  title = {Restricted Boltzmann Machines (RBM) - DeepLearning 0.1 documentation},
+  howpublished = {\url{http://deeplearning.net/tutorial/rbm.html}},
+  note = {Accessed: 2016-11-22}
+}
+
+
+
 
 
 @inproceedings{cnnarchImg,
