--- a/content/concl.tex
+++ b/content/concl.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusion and Outlook}
+\chapter{Conclusion and Outlook} \label{c:conclusion}
 
 In this thesis we demonstrated how to train and build a spiking network to generate discriminative higher level features on event-based data.
 Although many systems for discrete data have been proposed, event-based systems are still mostly neglected.
@@ -10,7 +10,7 @@ We showed the similarities between the deep belief network and the spiking neura
 The second system directly trains a spiking neural network using a version of spike time depended plasticity to simulate the contrastive divergence algorithm. By training consecutive parts of the network layerwise, a more complex system was build. Due to the computational complexity, we only evaluated the performance on a small visual datasets. We showed how lateral inhibitory connections allow more discriminative features and allow a classification accuracy of 100 $\%$ on a dataset.
 At last we compare those two approaches and show how the event-based approach is able to generate more discriminative features and learns faster than the other approach.  
 
-\subsubsection{Biological plausibility}
+\subsubsection{Biological plausibility} \label{c:bioplau}
 
 Studies by Hubel and Wiesel suggest, certain neurons respond so similar features at different position of in visible field \cite{Hubel1959}.
 This suggest similar, but due to contortions in the cornea most probably not exactly the same, synaptic weights. 
@@ -28,27 +28,29 @@ The STDP flag determining either completely positive or negative does not appear
 
 Even so this system has many constrains, it might could be counted among one of the more biological plausible deep learning architectures.     
 
-\section{Future work}
+\section{Future work} \label{c:future}
 
 While this system shows promising results on small dataset, there is still a lot of space for improvement on the performance and biological plausibility level.
 
-\subsection{Neuromorphic Hardware}
+\subsection{Neuromorphic Hardware} \label{c:neuhard}
 
 One of the biggest constrains of the here proposed frameworks, is the simulation speed of neural simulations.
 One way the training could be speed up, is to perform the simulations on dedicated Neuromorphic hardware. 
 There exists a few platforms which could be used, each having different advantages and disadvantages.
 
-\paragraph{SpiNNakker} is a massively-parallel computer architecture which can use up to 1 million ARM processors to simulate up to 1 billion neurons \cite{jin2008efficient}. 
+\paragraph{SpiNNakker} \label{c:spinnakker}
+is a massively-parallel computer architecture which can use up to 1 million ARM processors to simulate up to 1 billion neurons \cite{jin2008efficient}. 
 In addition it can be interfaced with PyNN. 
 While implementing a custom STDP rule is quite feasible although having only integer weights, but keeping weights synchronized either for symmetric connections as well as convolution, poses a bigger challenge whose complexity exceeds this thesis.
 
-\paragraph{Spikey} emulates spiking neural networks with conductance based leaky integrate-and-fire neurons and synapses implemented in analog microelectronics \cite{Pfeil1311}.
+\paragraph{Spikey} \label{c:spikey}
+emulates spiking neural networks with conductance based leaky integrate-and-fire neurons and synapses implemented in analog microelectronics \cite{Pfeil1311}.
 It can simulate 384 neurons and 256 incoming synapses in each neuron, resulting in a total 98304 synapses.
 It can also be interfaced with PyNN.
 This can allow approximately 10000-fold faster computations than biological real-time.
 But due to the weights, which are implemented directly in hardware and the noisy and less fault tolerant analog electronics this poses challenges for a "phased" custom STDP mechanism and weight-sharing. 
 
-\subsection{Biological plausible learning}
+\subsection{Biological plausible learning} \label{c:biofuture}
 
 Another direction which poses great potential for further research is tackling, the current restrictions on the biological plausibility.  
 
